# MultiMedEval

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MANIFEST.in  MIMIC_entity_extraction.py  README.md  answerLogMedQA.csv  answerLogPubMedQA.csv  benchmark.py  cheatSheet.sh  convertToONNX.py  locatedAtRelations.json  myJob  myjob  pyproject.toml  readme.md  requirements.txt  results.json  runJob.sh  setup.py  startSMI.sh  tasksReady.json  terminal.txt  test.job  test.py  testBLEU.py  testImageClassification.py  testMIMIC.py  testMIMIC3.py  testMedQA.py  testONNX.py  testPadUfes.py  testPubMedQA.py  testTasks.py  testTransformer.py  testVQA.py
.github/workflows/: python-publish.yml  python-tests.yml
MultiMedEvalAdditionalDatasets/exampleDataset/: dataset.json
MultiMedEvalAdditionalDatasets/exampleDatasetQA/: dataset.json
benchmarkPMCLlama/: PubMedQA.csv  metrics_MedMCQA.json
dataset_stats/: modalities.html
multimedbench/: __init__.py  engine.py  imageClassification.py  mednli.py  medqa.py  mimic.py  mimic_iii.py  mnist.py  pad_ufes_20.py  qa.py  utils.py  visualization.py  vqa.py
multimedbench/chexbert/: __init__.py  bert_tokenizer.py  label.py  utils.py
multimedbench/chexbert/datasets/: unlabeled_dataset.py
multimedbench/manualEvaluation/: analyseHumanFeedback.py
multimedeval/: ChestXray14.py  __init__.py  chestxray14.py  composite_metric_model_dill.pkl  ct_rate.py  dynamicDatasets.py  dynamic_datasets.py  engine.py  imageClassification.py  image_classification.py  kits19.py  mednli.py  mimic.py  mimic_iii.py  mimiciiisplit.csv  mnist.py  normalizer_dill.pkl  padufessplit.csv  qa.py  radcliq-v1.dill  radcliq-v1_dill.pkl  refuge.py  reportComparisonUtils.py  report_comparison_utils.py  taskFamilies.py  task_families.py  tqdm_loggable.py  utils.py  visualization.py  vqa.py
multimedeval/chexbert/: __init__.py  bert_tokenizer.py  constants.py  label.py  utils.py
multimedeval/chexbert/datasets/: impressions_dataset.py  unlabeled_dataset.py
multimedeval/chexbert/models/: bert_encoder.py  bert_labeler.py
multimedeval/manualEvaluation/: streamLit.py
multimedeval/overrides_/: __init__.py  overrides.py
multimedeval/radgraph/: __init__.py  radgpt.py  radgraph.py  rewards.py  utils.py
multimedeval/radgraph/allennlp/: __init__.py  __main__.py
multimedeval/radgraph/allennlp/commands/: __init__.py  evaluate.py  find_learning_rate.py  predict.py  print_results.py  subcommand.py  test_install.py  train.py
multimedeval/radgraph/allennlp/common/: __init__.py  cached_transformers.py  checks.py  file_utils.py  from_params.py  logging.py  params.py  plugins.py  registrable.py  tqdm.py  util.py
multimedeval/radgraph/allennlp/data/: __init__.py  batch.py  dataloader.py  instance.py  vocabulary.py
multimedeval/radgraph/allennlp/interpret/: __init__.py
multimedeval/radgraph/allennlp/models/: __init__.py  archival.py  basic_classifier.py  model.py  simple_tagger.py
multimedeval/radgraph/allennlp/modules/: __init__.py  augmented_lstm.py  bimpm_matching.py  conditional_random_field.py  elmo.py  elmo_lstm.py  (+13 more)
multimedeval/radgraph/allennlp_models/: pretrained.py
results/: benchmark.py  main.py  readme.md
results/LLMs/: batcher.py  benchmark.py  requirements.txt
results/LLaVA-Med/: benchmark.py
results/RadFM/: batcher.py  benchmark.py  cleanModel.py  requirements.txt
results/benchmarkPMCLlama/: metrics_MedQA.json
results/ct_clip/: attention.py  ct_clip.py  cvit.py  mlm.py  thresholds_CT-CLIP.json  thresholds_CT-LiPro.json  thresholds_CT-VocabFine.json  visual_ssl.py
results/llava_med/: README.md  batcher.py  requirements.txt
results/pmc_llama/: MedMCQA.csv  MedQA.csv  metrics_PubMedQA.json
results/rad_fm/: README.md  batcher.py  requirements.txt
results/rad_fm/Model/: blocks.py  multimodality_model.py  my_embedding_layer.py  transformer_decoder.py  utils.py  vit_3d.py
tests/: 50_samples_gt_and_candidates.csv  6_valid_raters_per_rater_error_categories.csv  test_config.json  test_config_chestxray14.json  test_dataclasses.py  test_image_classification.py  test_loading_all.py  test_nli.py  test_report_comparison.py  test_segmentation.py  test_setup.py  test_vqa_preprocessing.py
(+329 files in other folders)
