[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "MultiMedEval"
version = "0.1.4"
authors = [
  { name="Corentin Royer" },
]
description = "A Python tool to evaluate the performance of VLM on the medical domain."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]


[project.urls]
Homepage = "https://github.com/corentin-ryr/MultiMedEval"
Issues = "https://github.com/corentin-ryr/MultiMedEval/issues"

[tool.setuptools.packages.find]
include = ["multimedeval*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
multimedeval = ["*.plk", "*.csv"]