[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "multimedeval"
version = "0.1.1"
authors = [
  { name="Corentin Royer" },
]
description = "A Python tool to evaluate the performance of VLM on the medical domain."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]


[project.urls]
Homepage = "https://github.com/corentin-ryr/MultiMedEval"
Issues = "https://github.com/corentin-ryr/MultiMedEval/issues"

[tool.setuptools.packages.find]
include = ["multimedeval*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-order",
    "plotly",
    "kaleido",
    "tabulate",
    "colour"
]

[tool.pytest.ini_options]
addopts = "--cov=multimedeval"
testpaths = "tests"

[tool.coverage.run]
omit = ["multimedeval/chexbert/*", "multimedeval/tqdm_loggable.py"]

